[project]
name = "vivi-ytdl-proccess"
version = "0.1.0"
description = "A common wraper around ytdl"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp[default]==2026.7.21.234255.dev0",
]

# linter
[tool.ruff]
line-length = 160
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

